[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sarthak Munshi <sarthakmunshi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
